--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,15 +7,15 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-log = "*"
-log4rs = "*"
-clap = { git = "https://github.com/clap-rs/clap/" }
-git-version = "*"
-toml = "*"
-serde = "*"
-serde_derive = "*"
-tonic = "0.2"
-prost = "0.6"
-futures = "0.3.0"
-tokio = { version = "0.2", features = ["macros", "time"] }
+log = "0.4"
+log4rs = { version = "1", features = ["gzip"] }
+clap = "3.0.0-beta.2"
+git-version = "0.3"
+toml = "0.5.8"
+serde = { version = "1", features = ["derive"] }
+tonic = "0.4"
+prost = "0.7"
+futures = "0.3"
+tokio = "1.5"
 cita_cloud_proto = { git = "https://github.com/cita-cloud/cita_cloud_proto" }
+tokio-stream = { version = "0.1.5", features = ["net"] }
