--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,23 +1,23 @@
 [package]
 name = "network"
-version = "0.2.0"
+version = "5.0.0"
 authors = ["Rivtower Technologies <contact@rivtower.com>"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-log = "0.4"
-log4rs = { version = "1", features = ["gzip"] }
+log = "0.4.14"
+log4rs = { version = "1.0.0", features = ["default", "gzip"] }
 clap = "3.0.0-beta.2"
-git-version = "0.3"
+git-version = "0.3.4"
+tonic = "0.4.3"
+prost = "0.7.0"
 toml = "0.5.8"
-serde = { version = "1", features = ["derive"] }
-tonic = "0.4"
-prost = "0.7"
-futures = "0.3"
-tokio = "1.5"
-cita_cloud_proto = { git = "https://github.com/cita-cloud/cita_cloud_proto" }
+serde = { version = "1.0.125", features = ["derive"] }
+futures = "0.3.14"
+tokio = "1.5.0"
+cita_cloud_proto = { git = "https://github.com/cita-cloud/cita_cloud_proto", branch = "v5.0.0" }
 tokio-stream = { version = "0.1.5", features = ["net"] }
 
 [profile.release.package."*"]
