--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "network"
-version = "0.2.0"
+version = "6.0.0"
 authors = ["Rivtower Technologies <contact@rivtower.com>"]
 edition = "2018"
 
@@ -16,7 +16,7 @@ tonic = "0.5"
 prost = "0.8"
 futures = "0.3"
 tokio = "1.5"
-cita_cloud_proto = { git = "https://github.com/cita-cloud/cita_cloud_proto", version = "6.2.0" }
+cita_cloud_proto = { git = "https://github.com/cita-cloud/cita_cloud_proto", branch = "v6.0.0" }
 tokio-stream = { version = "0.1.5", features = ["net"] }
 
 [profile.release.package."*"]
