--- a/.github/workflows/build-docker-images.yml
+++ b/.github/workflows/build-docker-images.yml
@@ -19,11 +19,12 @@ jobs:
         uses: actions/checkout@v2
         with:
           submodules: recursive
-      - name: "Login to DockerHub"
+      - name: "Login to Registry"
         uses: docker/login-action@v1
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_PASSWORD }}
+          registry: ${{ secrets.DOCKER_REGISTRY_ADDRESS }}
+          username: ${{ secrets.DOCKER_REGISTRY_USERNAME }}
+          password: ${{ secrets.DOCKER_REGISTRY_PASSWORD }}
       - name: "Set up QEMU"
         uses: docker/setup-qemu-action@v1
         with:
@@ -32,7 +33,7 @@ jobs:
         uses: docker/setup-buildx-action@v1
       - name: "Building docker images"
         run: |
-          image="citacloud/$(basename ${GITHUB_REPOSITORY})"
+          image="${{ secrets.DOCKER_REGISTRY_ADDRESS }}/cita-cloud/$(basename ${GITHUB_REPOSITORY})"
           tag=${GITHUB_REF#refs/heads/}
           if [ "$tag" = 'master' ] || [ "$tag" = 'main' ]; then
               tag=latest
@@ -42,5 +43,5 @@ jobs:
               --output "type=image,push=true" \
               --file "Dockerfile" \
               --tag "${image}:${tag}" \
-              --platform "linux/amd64,linux/arm64" \
+              --platform "linux/amd64" \
               "."
